--- a/resources/templates/base.html
+++ b/resources/templates/base.html
@@ -6,7 +6,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>{% block title %} {{ config('application.name', 'Masonite') }} {% endblock %}</title>
+    <title>{% block title %} Safe Galaxy {% endblock %}</title>
+    <!-- Libraries -->
+    <script src="/storage/static/lib/jquery/jquery.min.js"  type="text/javascript"></script>
+    <link href="/storage/static/lib/jquery/jquery-ui.min.css" rel="stylesheet">
+    <script src="/storage/static/lib/jquery/jquery-ui.min.js"></script>
+
+    <link href="/storage/static/lib/bootstrap/bootstrap-grid.min.css" rel="stylesheet" type="text/css">
 
     <!-- Application CSS -->
     <link href="/storage/compiled/style.css" rel="stylesheet" type="text/css">
@@ -17,15 +23,9 @@
 </head>
 
 <body>
+    {% block content %}
 
-    <div class="flex-center position-ref full-height">
-
-        <div class="content">
-            {% block content %}
-
-            {% endblock %}
-        </div>
-    </div>
+    {% endblock %}
 </body>
 
 </html>
