--- a/resources/templates/pages/home.html
+++ b/resources/templates/pages/home.html
@@ -1,33 +1,224 @@
-{% if exists('auth/base') %}
-    {% extends 'auth/base.html' %}
-{% else %}
-    {% extends 'base.html' %}
-{% endif %}
 
-{% block css %}
-<!-- Application CSS -->
-<link href="/storage/compiled/style.css" rel="stylesheet" type="text/css">
-{% endblock %}
+{% extends 'base.html' %}
 
 
 {% block content %}
-<div class="container text-center">
-    <div class="title m-b-md">
-        {{ config('application.name') }}
-    </div>
 
-    <div class="links">
-        <a href="https://github.com/MasoniteFramework/masonite">The Modern And Developer Centric Python Web
-            Framework</a>
-    </div>
-    <br><br>
 
-    <div class="links">
-        <a href="https://github.com/MasoniteFramework/masonite">Github</a>
-        <a href="https://docs.masoniteproject.com">Documentation</a>
-        <a href="https://github.com/MasoniteFramework/core">Masonite Core</a>
-        <a href="http://slack.masoniteproject.com">Slack</a>
-        <a href="https://twitter.com/masoniteproject">Twitter</a>
+    <div class="position-ref  top-background">
+        <div class="social"></div>
+        <div id="navbar" class="">
+            <div class="row width-80">
+            <div class="col-lg"><div class="row padding-15"><div class="col-8 col-sm"><a href="#home">HOME</a></div></div></div>
+            <div class="col-lg"><div class="row padding-15"><div class="col-8 col-sm"><a href="#news">MEET OUR TEAM</a></div></div></div>
+            <!-- <div class="col-sm"><img src="/storage/static/images/SafeGalaxy-logo-looped.gif" width="100px" height="85px" class="center-items"></div> -->
+            <div class="col-sm"><img src="/storage/static/images/SafeGalaxy-Emblem-white.png" width="100px" height="85px" class="center-items"></div>
+            <div class="col-lg"><div class="row padding-15"><div class="col-8 col-sm"><a href="#contact">ROAD MAP</a></div></div></div>
+            <div class="col-lg"><div class="row padding-15"><div class="col-8 col-sm"><button class="how-to-buy center-items font-text-bold"><a href="#contact">HOW TO BUY</a></button></div></div></div>
+            </div>
+        </div>
+
+        <div class="content">
+            <div class="col-lg">
+                <div class="row padding-top-70">
+                    <div class="col-8 col-sm">
+                        <h1 class="font-text-bold header-main">Intergalactic Static<br>Liquidity Protocol</h1>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-8 col-sm">
+                        <h2 class="font-text header-main-sm">Join thousands of other investors to go to infinity &#38; beyond</h2>
+                    </div>
+                </div>
+                <br>
+                <br>
+                <div class="row">
+
+                    <div class="col-4 col-sm"></div>
+                    <div class="col-4 col-sm"></div>
+                    <div class="col-4 col-sm">
+                        <button class="how-to-buy center-items font-text-bold main-page-buttons"><a href="#contact">How to buy</a></button>
+                    </div>
+                    <div class="col-4 col-sm">
+                        <button class="how-to-buy center-items font-text-bold main-page-buttons" style="background-color: Transparent; border-color: #707070;"><a href="#contact">Whitepaper</a></button>
+                    </div>
+                    <div class="col-4 col-sm"></div>
+                    <div class="col-4 col-sm"></div>
+                </div>
+            </div>
+        </div>
+
+        <div class="bottom-gradient-main"></div>
     </div>
-</div>
+        <br>
+        <br>
+        <br>
+        <br>
+    <div class="position-ref">
+
+        <div class="content">
+            <div class="row">
+                <div class="col-lg"><div class="row"><div class="col-8 col-sm"><img src="/storage/static/images/Heart-emoji.png" width="75px" height="75px" class="center-items">
+                            <h1 class="font-text-bold sub-header-main">16,271</h1>
+                            <h2 class="font-text sub-header-main-sm">Holders</h2>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg"><div class="row"><div class="col-8 col-sm"><img src="/storage/static/images/Money-bag-emoji.png" width="75px" height="75px" class="center-items">
+                            <h1 class="font-text-bold sub-header-main">10,000,000.00 USD</h1>
+                            <h2 class="font-text sub-header-main-sm">Liquidity Generated</h2>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg"><div class="row"><div class="col-8 col-sm"><img src="/storage/static/images/Cap-emoji.png" width="75px" height="75px" class="center-items">
+                            <h1 class="font-text-bold sub-header-main">500 M</h1>
+                            <h2 class="font-text sub-header-main-sm">Market Cap</h2>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg"><div class="row"><div class="col-8 col-sm"><img src="/storage/static/images/Fire-emoji.png" width="75px" height="75px" class="center-items">
+                            <h1 class="font-text-bold sub-header-main">500.000 T</h1>
+                            <h2 class="font-text sub-header-main-sm">Tokens Burned</h2>
+                        </div>
+                    </div>
+                </div>
+        </div>
+    </div>
+    <br>
+    <br>
+    <br>
+    <br>
+    <div class="position-ref">
+
+        <div class="content container">
+            <div class="row">
+                <div class="col-lg"><div class="row padding-25"><div class="col-8 col-sm"><img src="/storage/static/images/Planet-3.png" width="275px" height="175px" class="center-items">
+                            <h1 class="font-text-bold sub-header-main-blocks">Comm-UNITY Focus</h1>
+                            <br>
+                            <p class="font-text sub-header-main-blocks-sm">Making money is great, making money together is better. We choose to share our success with the world in an effort to better the lives of our community, their families and their bank accounts.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg"><div class="row padding-25"><div class="col-8 col-sm"><img src="/storage/static/images/Planet-1.png" width="275px" height="175px" class="center-items">
+                            <h1 class="font-text-bold sub-header-main-blocks">Growth Mindset</h1>
+                            <br>
+                            <p class="font-text sub-header-main-blocks-sm">We are young ambitious developers looking to make an impact. Our team is comprised of members who look beyond the stars and into the furthest reaches of what many would deem impossible.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg"><div class="row padding-25"><div class="col-8 col-sm"><img src="/storage/static/images/Planet-2.png" width="275px" height="175px" class="center-items">
+                            <h1 class="font-text-bold sub-header-main-blocks">Transparency</h1>
+                            <br>
+                            <p class="font-text sub-header-main-blocks-sm">We take pride in being open about who we are and where our values lie. We aren’t afraid to give our opinions in AMAs or to answer any and all questions. We are transparent with as much as we can while still remaining competitive.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="position-ref bottom-background">
+        <div class="top-gradient-main"></div>
+
+        <div class="content">
+            <div class="container">
+                <img src="/storage/static/images/SafeGalaxy-roadmap-alpha.png" class="center-items">
+
+            </div>
+        </div>
+        <div class="bottom-gradient-main"></div>
+    </div>
+    <div class="position-ref">
+        <div class="content container">
+            <div class="row">
+
+                <div class="col-lg">
+                    <div class="row padding-25">
+                        <div class="col-8 col-sm">
+                            <span class="copied_message" style="color: #FF3BFF; display: none;">Copied!</span>
+                            <h2 class="font-text sub-header-main-sm">Contract Address: <span id="contract_address" class="font-text-bold sub-header-main-blocks">0x6b51231c43B1604815313801dB5E9E614914d6e4</span>&nbsp;&nbsp;
+                                <a id="clipboard_copy" title="Copy Address" >{% include "/svg/copy-icon.svg" %}</a></h2>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="position-ref">
+        <div class="content container">
+            <div class="row">
+
+                <div class="col-lg">
+                    <div class="row padding-top-70">
+                        <div class="col-8 col-sm">
+                            <h1 class="font-text-bold header-main">FAQ</h1>
+                        </div>
+                    </div>
+                    <div class="row padding-top-70"><hr></div>
+                    <h1 class="font-text-bold sub-header-main-blocks">Transparency</h1>
+                    <div class="row padding-top-70"><hr></div>
+                    <h1 class="font-text-bold sub-header-main-blocks">Transparency</h1>
+                    <div class="row padding-top-70"><hr></div>
+                    <h1 class="font-text-bold sub-header-main-blocks">Transparency</h1>
+                    <div class="row padding-top-70"><hr></div>
+                    <h1 class="font-text-bold sub-header-main-blocks">Transparency</h1>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="position-ref bottom-gradient-image">
+        <img src="/storage/static/images/Safegalaxy-background-pink-glow.png" height="400px" width="100%" class="center-items">
+    </div>
+    <div class="position-ref">
+        <br>
+        <br>
+        <br>
+        <br>
+        <div class="content">
+            <div class="row">
+                <div class="col-lg"><div class="row"><div class="col-8 col-sm"><img src="/storage/static/images/SafeGalaxy-Logo-white.png" width="350px" height="50px" class="center-items">
+                        </div>
+                    </div>
+                </div>
+<!--                 <div class="col-lg"><div class="row"><div class="col-8 col-sm"><img src="/storage/static/images/Money-bag-emoji.png" width="75px" height="75px" class="center-items">
+                            <h1 class="font-text-bold sub-header-main">10,000,000.00 USD</h1>
+                            <h2 class="font-text sub-header-main-sm">Liquidity Generated</h2>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg"><div class="row"><div class="col-8 col-sm"><img src="/storage/static/images/Cap-emoji.png" width="75px" height="75px" class="center-items">
+                            <h1 class="font-text-bold sub-header-main">500 M</h1>
+                            <h2 class="font-text sub-header-main-sm">Market Cap</h2>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg"><div class="row"><div class="col-8 col-sm"><img src="/storage/static/images/Fire-emoji.png" width="75px" height="75px" class="center-items">
+                            <h1 class="font-text-bold sub-header-main">500.000 T</h1>
+                            <h2 class="font-text sub-header-main-sm">Tokens Burned</h2>
+                        </div>
+                    </div>
+                </div> -->
+            </div>
+            <div class="row">
+
+            </div>
+            <br>
+            <br>
+                <div class="row">
+                    <div class="col-lg">
+                        <img src="/storage/static/images/Discord.png" width="50px" height="50px" class="social-bottom">
+                        <img src="/storage/static/images/Telegram.png" width="50px" height="50px" class="social-bottom">
+                        <img src="/storage/static/images/Twitter.png" width="50px" height="50px" class="social-bottom">
+                        <img src="/storage/static/images/FaceBook.png" width="50px" height="50px" class="social-bottom">
+                        <img src="/storage/static/images/Instagram.png" width="50px" height="50px" class="social-bottom">
+                        <img src="/storage/static/images/Reddit.png" width="50px" height="50px" class="social-bottom">
+                        <img src="/storage/static/images/Tiktok.png" width="50px" height="50px" class="social-bottom">
+                    </div>
+                </div>
+        </div>
+    </div>
+    <br>
+    <br>
+    <br>
+    <br>
+    <script src="/storage/static/js/home.js?version={{cache_buster}}"></script>
 {% endblock %}
