--- a/resources/templates/base.html
+++ b/resources/templates/base.html
@@ -12,7 +12,9 @@
     <link href="/storage/static/lib/jquery/jquery-ui.min.css" rel="stylesheet">
     <script src="/storage/static/lib/jquery/jquery-ui.min.js"></script>
 
+    <script src="/storage/static/lib/bootstrap/bootstrap.min.js"></script>
     <link href="/storage/static/lib/bootstrap/bootstrap-grid.min.css" rel="stylesheet" type="text/css">
+    <link href="/storage/static/lib/bootstrap/bootstrap.min.css" rel="stylesheet" type="text/css">
 
     <!-- Application CSS -->
     <link href="/storage/compiled/style.css" rel="stylesheet" type="text/css">
