--- a/storage/compiled/style.css
+++ b/storage/compiled/style.css
@@ -12,6 +12,7 @@
 
 html, body {
   background-color: #0B001E;
+  scroll-behavior: smooth;
   color: #FF3BFF;
   font-family: "Mosk", "Mosk Bold";
   font-weight: 700;
@@ -28,6 +29,11 @@ a:hover {
 .font-text-bold {
   font-family: 'Mosk Bold';
   font-weight: 800; }
+
+.font-text-faq {
+  font-family: 'Mosk';
+  font-weight: 300;
+  float: left; }
 
 .full-height {
   height: 100vh; }
@@ -127,9 +133,10 @@ a:hover {
   width: 80%; }
 
 .social {
-  opacity: 0.2;
   background-color: #FF3BFF;
-  height: 25px; }
+  background-color: rgba(255, 59, 255, 0.2);
+  height: 25px;
+  --bs-gutter-x: 0rem; }
 
 .social-bottom {
   margin: 10px; }
@@ -148,7 +155,7 @@ a:hover {
   color: #fff; }
 
 .sub-header-main {
-  font-size: 48px;
+  font-size: 40px;
   color: #fff;
   margin-bottom: 10px; }
 
@@ -157,6 +164,32 @@ a:hover {
   color: #fff;
   font-weight: 100;
   margin-top: 10px; }
+
+.social-navbar-sm {
+  font-size: 18px;
+  color: #fff;
+  font-weight: 100;
+  margin-top: 0px;
+  margin-left: 20px;
+  margin-bottom: 0px; }
+
+.social-navbar-main {
+  font-size: 20px;
+  color: #fff;
+  margin-bottom: 0px; }
+
+.social-navbar {
+  float: right;
+  margin: 5px 10px 5px 10px; }
+
+.social-left {
+  margin-left: 15%;
+  max-width: 50%;
+  width: 50%; }
+
+.social-right {
+  max-width: 25%;
+  width: 25%; }
 
 .sub-header-main-blocks {
   font-size: 32px;
@@ -210,3 +243,19 @@ a:hover {
   text-align: center;
   padding: 14px;
   text-decoration: none; }
+
+.faq-row {
+  width: 75%;
+  display: block;
+  margin-left: auto;
+  margin-right: auto; }
+
+.faq-expand-btn {
+  float: right;
+  background-color: #0b001e;
+  border: none;
+  box-shadow: none; }
+
+.faq-answer {
+  background-color: #0b001e;
+  color: #FF3BFF; }
