--- a/resources/templates/base.html
+++ b/resources/templates/base.html
@@ -15,6 +15,7 @@
     <script src="/storage/static/lib/bootstrap/bootstrap.min.js"></script>
     <link href="/storage/static/lib/bootstrap/bootstrap-grid.min.css" rel="stylesheet" type="text/css">
     <link href="/storage/static/lib/bootstrap/bootstrap.min.css" rel="stylesheet" type="text/css">
+    <link href="/storage/static/lib/fontawesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
 
     <!-- Application CSS -->
     <link href="/storage/compiled/style.css" rel="stylesheet" type="text/css">
