--- a/resources/templates/components/navbar.html
+++ b/resources/templates/components/navbar.html
@@ -1,53 +1,96 @@
-<div class="social row">
-    <div class="col-8 social-left">
-        <h2 class="font-text social-navbar-sm">Contract Address: <span id="contract_address" class="font-text-bold social-navbar-main">0x6b51231c43B1604815313801dB5E9E614914d6e4</span>&nbsp;&nbsp;
-            <a id="clipboard_copy" title="Copy Address" >{% include "/svg/copy-icon.svg" %}</a></h2>
-    </div>
-    <div class="col-4 social-right">
-        <img src="/storage/static/images/Discord.png" width="20px" height="20px" class="social-navbar" usemap="#discord_social_map">
-        <map name="discord_social_map">
-            <area shape="circle" coords="10,10,10" alt="SafeGalaxy Discord" target="_blank" href="https://discord.com/invite/dq7m6R7UAz">
-        </map>
+<div class="social">
+    <div class="row col-sm-12 col-md-10" style="margin:0 auto">
 
-        <img src="/storage/static/images/Telegram.png" width="20px" height="20px" class="social-navbar" usemap="#telegram_social_map">
-        <map name="telegram_social_map">
-            <area shape="circle" coords="10,10,10" alt="SafeGalaxy Telegram" target="_blank" href="https://t.me/safegalaxychat">
-        </map>
+        <div class="col-8 desktop">
+            <h2 class="font-text social-navbar-sm">Contract Address: <span id="contract_address" class="font-text-bold social-navbar-main">0x6b51231c43B1604815313801dB5E9E614914d6e4</span>&nbsp;&nbsp;
+                <a id="clipboard_copy" title="Copy Address" >{% include "/svg/copy-icon.svg" %}</a></h2>
+        </div>
+        <div class="col-12 col-md-4 header-icon">
+            <img src="/storage/static/images/Discord.png" width="20px" height="20px" class="social-navbar" usemap="#discord_social_map">
+            <map name="discord_social_map">
+                <area shape="circle" coords="10,10,10" alt="SafeGalaxy Discord" target="_blank" href="https://discord.com/invite/dq7m6R7UAz">
+            </map>
 
-        <img src="/storage/static/images/Twitter.png" width="20px" height="20px" class="social-navbar" usemap="#twitter_social_map">
-        <map name="twitter_social_map">
-            <area shape="circle" coords="10,10,10" alt="SafeGalaxy Twitter" target="_blank" href="https://twitter.com/SafeGalaxyToken">
-        </map>
+            <img src="/storage/static/images/Telegram.png" width="20px" height="20px" class="social-navbar" usemap="#telegram_social_map">
+            <map name="telegram_social_map">
+                <area shape="circle" coords="10,10,10" alt="SafeGalaxy Telegram" target="_blank" href="https://t.me/safegalaxychat">
+            </map>
 
-        <img src="/storage/static/images/FaceBook.png" width="20px" height="20px" class="social-navbar" usemap="#facebook_social_map">
-        <map name="facebook_social_map">
-            <area shape="circle" coords="10,10,10" alt="SafeGalaxy Facebook" target="_blank" href="https://facebook.com/SafeGalaxyToken">
-        </map>
+            <img src="/storage/static/images/Twitter.png" width="20px" height="20px" class="social-navbar" usemap="#twitter_social_map">
+            <map name="twitter_social_map">
+                <area shape="circle" coords="10,10,10" alt="SafeGalaxy Twitter" target="_blank" href="https://twitter.com/SafeGalaxyToken">
+            </map>
 
-        <img src="/storage/static/images/Instagram.png" width="20px" height="20px" class="social-navbar" usemap="#instagram_social_map">
-        <map name="instagram_social_map">
-            <area shape="circle" coords="10,10,10" alt="SafeGalaxy Instagram" target="_blank" href="https://www.instagram.com/safegalaxytoken/?igshid=jr936k6emyet">
-        </map>
+            <img src="/storage/static/images/FaceBook.png" width="20px" height="20px" class="social-navbar" usemap="#facebook_social_map">
+            <map name="facebook_social_map">
+                <area shape="circle" coords="10,10,10" alt="SafeGalaxy Facebook" target="_blank" href="https://facebook.com/SafeGalaxyToken">
+            </map>
 
-        <img src="/storage/static/images/Reddit.png" width="20px" height="20px" class="social-navbar" usemap="#reddit_social_map">
-        <map name="reddit_social_map">
-            <area shape="circle" coords="10,10,10" alt="SafeGalaxy Reddit" target="_blank" href="https://www.reddit.com/r/SafeGalaxy">
-        </map>
+            <img src="/storage/static/images/Instagram.png" width="20px" height="20px" class="social-navbar" usemap="#instagram_social_map">
+            <map name="instagram_social_map">
+                <area shape="circle" coords="10,10,10" alt="SafeGalaxy Instagram" target="_blank" href="https://www.instagram.com/safegalaxytoken/?igshid=jr936k6emyet">
+            </map>
 
-        <img src="/storage/static/images/Tiktok.png" width="20px" height="20px" class="social-navbar" usemap="#tiktok_social_map">
-        <map name="tiktok_social_map">
-            <area shape="circle" coords="10,10,10" alt="SafeGalaxy Tiktok" target="_blank" href="https://vm.tiktok.com/ZSJ6ghm4k/">
-        </map>
+            <img src="/storage/static/images/Reddit.png" width="20px" height="20px" class="social-navbar" usemap="#reddit_social_map">
+            <map name="reddit_social_map">
+                <area shape="circle" coords="10,10,10" alt="SafeGalaxy Reddit" target="_blank" href="https://www.reddit.com/r/SafeGalaxy">
+            </map>
+
+            <img src="/storage/static/images/Tiktok.png" width="20px" height="20px" class="social-navbar" usemap="#tiktok_social_map">
+            <map name="tiktok_social_map">
+                <area shape="circle" coords="10,10,10" alt="SafeGalaxy Tiktok" target="_blank" href="https://vm.tiktok.com/ZSJ6ghm4k/">
+            </map>
+        </div>
     </div>
 </div>
-<span class="copied_message" style="color: #fff; display: none; justify-content: center;">Copied!</span>
-<div id="navbar" class="">
-    <div class="row width-80">
-    <div class="col-lg"><div class="row padding-15"><div class="col-8 col-sm"><a href="/">HOME</a></div></div></div>
-    <div class="col-lg"><div class="row padding-15"><div class="col-8 col-sm"><a href="/team">MEET OUR TEAM</a></div></div></div>
-    <!-- <div class="col-sm"><img src="/storage/static/images/SafeGalaxy-logo-looped.gif" width="100px" height="85px" class="center-items"></div> -->
-    <div class="col-sm"><img src="/storage/static/images/SafeGalaxy-Emblem-white.png" width="100px" height="85px" class="center-items"></div>
-    <div class="col-lg"><div class="row padding-15"><div class="col-8 col-sm"><a href="#road-map">ROAD MAP</a></div></div></div>
-    <div class="col-lg"><div class="row padding-15"><div class="col-8 col-sm"><button class="how-to-buy center-items font-text-bold"><a target="_blank" href="https://exchange.pancakeswap.finance/#/swap?inputCurrency=0x6b51231c43B1604815313801dB5E9E614914d6e4">WHERE TO BUY</a></button></div></div></div>
+<span class="copied_message" style="color: #FF3BFF; display: none; justify-content: center;">Copied!</span>
+<div id="navbar" class="navbar navbar-expand-sm">
+    <div class="container-fluid">
+        <button
+            class="navbar-toggler mobile"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarToggleExternalContent"
+            aria-controls="navbarToggleExternalContent"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+        >
+          <i class="fa fa-bars" style="color:white;"></i>
+          <!-- <span class="navbar-toggler-icon"></span> -->
+        </button>
+
+
+        <div class="row col-10 desktop" style="margin:0 auto">
+            <div class="col-lg"><div class="row padding-15"><div class="col-8 col-sm"><a href="/">HOME</a></div></div></div>
+            <div class="col-lg"><div class="row padding-15"><div class="col-8 col-sm"><a href="/team">MEET OUR TEAM</a></div></div></div>
+            <div class="col-sm"><img src="/storage/static/images/SafeGalaxy-Emblem-white.png" width="100px" height="85px" class="center-items"></div>
+            <div class="col-lg"><div class="row padding-15"><div class="col-8 col-sm"><a href="#road-map">ROAD MAP</a></div></div></div>
+            <div class="col-lg"><div class="row padding-15"><div class="col-8 col-sm"><button class="how-to-buy center-items font-text-bold"><a target="_blank" href="https://exchange.pancakeswap.finance/#/swap?inputCurrency=0x6b51231c43B1604815313801dB5E9E614914d6e4">WHERE TO BUY</a></button></div></div></div>
+        </div>
     </div>
+
+    <!-- for all mobile menu -->
+    <div class="collapse mobile" id="navbarToggleExternalContent">
+      <div class="p-4">
+        <div class="navbar-collapse" id="navbarSupportedContent">
+            <div class="col-sm"><img src="/storage/static/images/SafeGalaxy-Emblem-white.png" width="100px" height="85px" class="center-items"></div>
+
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                <li class="nav-item">
+                    <a href="/">HOME</a>
+                </li>
+                <li class="nav-item">
+                    <a href="/team">MEET OUR TEAM</a>
+                </li>
+                <li class="nav-item">
+                    <a href="#road-map">ROAD MAP</a>
+                </li>
+                <li class="nav-item">
+                    <button class="how-to-buy center-items font-text-bold"><a target="_blank" href="https://exchange.pancakeswap.finance/#/swap?inputCurrency=0x6b51231c43B1604815313801dB5E9E614914d6e4">WHERE TO BUY</a></button>
+                </li>
+            </ul>
+        </div>
+      </div>
+    </div>
+
 </div>
