--- a/resources/templates/pages/how_to_buy.html
+++ b/resources/templates/pages/how_to_buy.html
@@ -5,88 +5,88 @@
 {% block content %}
 
 
-    <div class="position-ref  top-background" style="height: 100vh;">
+    <div class="position-ref  top-background">
         {% include "/components/navbar.html" %}
-        <br>
-        <br>
-        <br>
-        <br>
-        <div class="row" style="text-align: center; display: block; margin-left: auto; margin-right: auto;">
-            <h1 class="font-text-bold header-main">How to buy SafeGalaxy</h1>
-        </div>
-        <br>
-        <br>
-        <br>
-        <br>
-        <div class="row" style="display: block; margin-left: 15%; margin-right: auto;">
-            <h1 class="font-text-bold sub-header-main-blocks">Download MetaMask or TrustWallet</h1>
-        </div>
-        <br>
-        <br>
-        <br>
-        <br>
-        <div class="row" style="display: block; margin-left: 15%; margin-right: auto;">
-            <h1 class="font-text-bold sub-header-main-blocks">Set up your wallet (TrustWallet is already set up)</h1>
-            <h1 class="font-text sub-header-main-sm">Go to https://coinguides.org/binance-smart-chain-metamask/ for help</h1>
-        </div>
-        <br>
-        <br>
-        <br>
-        <br>
-        <div class="row" style="display: block; margin-left: 15%; margin-right: auto;">
-            <h1 class="font-text-bold sub-header-main-blocks">Go to Pancakeswap</h1>
-            <h1 class="font-text sub-header-main-sm">Go to https://exchange.pancakeswap.finance/#/swap</h1>
-        </div>
-        <br>
-        <br>
-        <br>
-        <br>
-        <div class="row" style="display: block; margin-left: 15%; margin-right: auto;">
-            <h1 class="font-text-bold sub-header-main-blocks">Click on <img src="/storage/static/images/Connect-button-pancake.png" width="250px" height="75px" class="" style="margin: 0px;"></h1>
-        </div>
-        <br>
-        <br>
-        <br>
-        <br>
-        <div class="row" style="display: block; margin-left: 15%; margin-right: auto;">
-            <h1 class="font-text-bold sub-header-main-blocks">Copy the SafeGalaxy Token address:</h1>
-            <div class="col-8 col-sm">
-                <h2 class="font-text sub-header-main-sm">Contract Address: <span id="contract_address" class="font-text-bold social-navbar-main">0x6b51231c43B1604815313801dB5E9E614914d6e4</span>&nbsp;&nbsp;
-                    <a id="clipboard_copy" title="Copy Address" >{% include "/svg/copy-icon.svg" %}</a>
-                <span class="copied_message" style="color: #FF3BFF; display: none;">Copied!</span></h2>
+        <div class="content container-sm">
+            <div class="row">
+                <div class="col-sm-12">
+                    <h1 class="font-text-bold header-main">How to buy SafeGalaxy</h1>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-sm-12 text-start my-4 display-flex">
+                    <img src="/storage/static/images/1.png" width="25px" height="25px" class="how-to-buy-img">
+                    <h1 class="font-text-bold how-to-buy-text">Download MetaMask or TrustWallet</h1>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-sm-12 text-start my-4">
+                    <div class="col-sm-12  display-flex">
+                        <img src="/storage/static/images/2.png" width="25px" height="25px" class="how-to-buy-img">
+                        <h1 class="font-text-bold how-to-buy-text">Set up your wallet (TrustWallet is already set up)</h1>
+                    </div>
+                    <div class="col-sm-12" style="margin-left: 35px;">
+                        <h1 class="font-text sub-header-main-blocks-sm">Go to https://coinguides.org/binance-smart-chain-metamask/ for help</h1>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-sm-12 text-start my-4">
+                    <div class="col-sm-12  display-flex">
+                        <img src="/storage/static/images/3.png" width="25px" height="25px" class="how-to-buy-img">
+                        <h1 class="font-text-bold how-to-buy-text">Go to Pancakeswap</h1>
+                    </div>
+                    <div class="col-sm-12" style="margin-left: 35px;">
+                        <h1 class="font-text sub-header-main-blocks-sm">Go to https://exchange.pancakeswap.finance/#/swap</h1>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-sm-12 text-start my-4 display-flex">
+                    <img src="/storage/static/images/4.png" width="25px" height="25px" class="how-to-buy-img">
+                    <h1 class="font-text-bold how-to-buy-text">Click on <img src="/storage/static/images/Connect-button-pancake.png" width="250px" height="75px" class="" style="margin: 0px;"></h1>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-sm-12 text-start my-4">
+                    <div class="col-sm-12  display-flex">
+                        <img src="/storage/static/images/5.png" width="25px" height="25px" class="how-to-buy-img">
+                        <h1 class="font-text-bold how-to-buy-text">Copy the SafeGalaxy Token address:</h1>
+                    </div>
+                    <div class="col-sm-12" style="margin-left: 35px;">
+                        <div class="col-8 col-sm">
+                            <h2 class="font-text sub-header-main-sm">Contract Address: <span id="contract_address" class="font-text-bold contract-address">0x6b51231c43B1604815313801dB5E9E614914d6e4</span>&nbsp;&nbsp;
+                                <a id="clipboard_copy" title="Copy Address" >{% include "/svg/copy-icon.svg" %}</a>
+                            <span class="copied_message" style="color: #FF3BFF; display: none;">Copied!</span></h2>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-sm-12 text-start my-4 display-flex">
+                    <img src="/storage/static/images/6.png" width="25px" height="25px" class="how-to-buy-img">
+                    <h1 class="font-text-bold how-to-buy-text">Click the settings <img src="/storage/static/images/Pancake-exchange-setting.png" width="50px" height="50px" class="" style="margin: 0px;"> button on the top right of the Swap interface and set slippage to 11%</h1>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-sm-12 text-start my-4">
+                    <img src="/storage/static/images/Pancake-exchange.png" width="350px" height="350px" class="" style="max-width: 350px; display: block; margin-left: auto; margin-right: auto; width: 100%;">
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-sm-12 text-start my-4">
+                    <div class="col-sm-12  display-flex">
+                        <img src="/storage/static/images/7.png" width="25px" height="25px" class="how-to-buy-img">
+                        <h1 class="font-text-bold how-to-buy-text">Enter the amount and hit swap</h1>
+                    </div>
+                    <div class="col-sm-12" style="margin-left: 35px;">
+                        <h1 class="font-text sub-header-main-sm">Remember to have enough BNB for gas fees!</h1>
+                    </div>
+                </div>
             </div>
         </div>
-        <br>
-        <br>
-        <br>
-        <br>
-        <div class="row" style="display: block; margin-left: 15%; margin-right: auto;">
-            <h1 class="font-text-bold sub-header-main-blocks">Click the settings <img src="/storage/static/images/Pancake-exchange-setting.png" width="50px" height="50px" class="" style="margin: 0px;"> button on the top right of the Swap interface and set slippage to 11%</h1>
-        </div>
-        <div class="row" style="display: block; margin-left: 15%; margin-right: auto;">
-            <img src="/storage/static/images/Pancake-exchange.png" width="350px" height="350px" class="" style="max-width: 400px; margin: 0px;">
-        </div>
-        <br>
-        <br>
-        <br>
-        <br>
-        <div class="row" style="display: block; margin-left: 15%; margin-right: auto;">
-            <h1 class="font-text-bold sub-header-main-blocks">Enter the amount and hit swap</h1>
-            <h1 class="font-text sub-header-main-sm">Remember to have enough BNB for gas fees!</h1>
-        </div>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
     </div>
 
+    {% include "/components/footer.html" %}
     <script src="/storage/static/js/how_to_buy.js?version={{cache_buster}}"></script>
 {% endblock %}
