--- a/resources/templates/pages/home.html
+++ b/resources/templates/pages/home.html
@@ -10,12 +10,12 @@
 
         <div class="content">
             <div class="col-lg">
-                <div class="row" style="width: 75%; display: block; margin-left: auto; margin-right: auto;">
+<!--                 <div class="row" style="width: 75%; display: block; margin-left: auto; margin-right: auto;">
                     <div class="alert alert-info alert-dismissible fade show" role="alert" style>
                       Mobile Responsiveness still in progress.
                       <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
                     </div>
-                </div>
+                </div> -->
                 <div class="row padding-top-70">
                     <div class="col-sm-12">
                         <h1 class="font-text-bold header-main">Intergalactic Static<br>Liquidity Protocol</h1>
