--- a/resources/templates/pages/home.html
+++ b/resources/templates/pages/home.html
@@ -7,7 +7,7 @@
 
     <div class="position-ref  top-background">
         {% include "/components/navbar.html" %}
-
+        {{path}}
         <div class="content">
             <div class="col-lg">
 <!--                 <div class="row" style="width: 75%; display: block; margin-left: auto; margin-right: auto;">
@@ -44,15 +44,15 @@
         <div class="content">
             <div class="row">
                 <div class="col-sm-3 my-2"><img src="/storage/static/images/Heart-emoji.png" width="75px" height="75px" class="center-items">
-                    <h1 class="font-text-bold sub-header-main">16,271</h1>
+                    <h1 class="font-text-bold sub-header-main">18K+</h1>
                     <h2 class="font-text sub-header-main-sm">Holders</h2>
                 </div>
                 <div class="col-sm-3 my-2"><img src="/storage/static/images/Money-bag-emoji.png" width="75px" height="75px" class="center-items">
-                    <h1 class="font-text-bold sub-header-main">$1,389,882.09 USD</h1>
+                    <h1 class="font-text-bold sub-header-main">$1.8M USD</h1>
                     <h2 class="font-text sub-header-main-sm">Liquidity Generated</h2>
                 </div>
                 <div class="col-sm-3 my-2"><img src="/storage/static/images/Cap-emoji.png" width="75px" height="75px" class="center-items">
-                    <h1 class="font-text-bold sub-header-main">$20,500,000</h1>
+                    <h1 class="font-text-bold sub-header-main">$29.5M USD</h1>
                     <h2 class="font-text sub-header-main-sm">Market Cap</h2>
                 </div>
                 <div class="col-sm-3 my-2"><img src="/storage/static/images/Fire-emoji.png" width="75px" height="75px" class="center-items">
@@ -93,8 +93,8 @@
         <div class="content">
             <div class="container-fluid">
                 <picture>
-                    <source media="(min-width: 960px)" srcset="/storage/static/images/SafeGalaxy-roadmap-desktop.png">
-                    <img src="/storage/static/images/SafeGalaxy-roadmap-mobile.png" class="center-items" width="100%">
+                    <source media="(max-width: 960px)" srcset="/storage/static/images/SafeGalaxy-roadmap-mobile.png">
+                    <img src="/storage/static/images/SafeGalaxy-roadmap-desktop.png" class="center-items" width="90%">
                 </picture>
             </div>
         </div>
