--- a/resources/templates/pages/how_to_buy.html
+++ b/resources/templates/pages/how_to_buy.html
@@ -7,6 +7,9 @@
 
     <div class="position-ref  top-background">
         {% include "/components/navbar.html" %}
+
+        {{path}}
+
         <div class="content container-sm">
             <div class="row">
                 <div class="col-sm-12">
