--- a/resources/templates/pages/team.html
+++ b/resources/templates/pages/team.html
@@ -11,7 +11,7 @@
         <br>
         <br>
         <br>
-        <div class="row" style="text-align: center; display: block; margin-left: auto; margin-right: auto;">
+        <div class="row" style="font-weight: 800; color: #fff; text-align: center; display: block; margin-left: auto; margin-right: auto;">
             <h1>COMING SOON!</h1>
         </div>
     </div>
