--- a/resources/templates/components/navbar.html
+++ b/resources/templates/components/navbar.html
@@ -3,7 +3,7 @@
 
         <div class="col-8 desktop">
             <h2 class="font-text social-navbar-sm">Contract Address: <span id="contract_address" class="font-text-bold social-navbar-main">0x6b51231c43B1604815313801dB5E9E614914d6e4</span>&nbsp;&nbsp;
-                <a id="clipboard_copy" title="Copy Address" >{% include "/svg/copy-icon.svg" %}</a></h2>
+                <a class="clipboard_copy clipboard-copy-link" title="Copy Address" >{% include "/svg/copy-icon.svg" %}</a></h2>
         </div>
         <div class="col-12 col-md-4 header-icon">
             <img src="/storage/static/images/Discord.png" width="20px" height="20px" class="social-navbar" usemap="#discord_social_map">
