--- a/resources/templates/pages/home.html
+++ b/resources/templates/pages/home.html
@@ -9,12 +9,6 @@
         {% include "/components/navbar.html" %}
         <div class="content">
             <div class="col-lg">
-<!--                 <div class="row" style="width: 75%; display: block; margin-left: auto; margin-right: auto;">
-                    <div class="alert alert-info alert-dismissible fade show" role="alert" style>
-                      Mobile Responsiveness still in progress.
-                      <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
-                    </div>
-                </div> -->
                 <div class="row padding-top-70">
                     <div class="col-sm-12">
                         <h1 class="font-text-bold header-main">Intergalactic Static<br>Liquidity Protocol</h1>
@@ -107,7 +101,7 @@
                     <div class="row padding-25">
                         <div class="col-sm-12">
                             <h2 class="font-text sub-header-main-sm">Contract Address: <span id="contract_address" class="font-text-bold contract-address">0x6b51231c43B1604815313801dB5E9E614914d6e4</span>&nbsp;&nbsp;
-                                <a id="clipboard_copy" title="Copy Address" >{% include "/svg/copy-icon.svg" %}</a></h2>
+                                <a class="clipboard_copy clipboard-copy-link" title="Copy Address" >{% include "/svg/copy-icon.svg" %}</a></h2>
                         </div>
                     </div>
                 </div>
@@ -135,7 +129,7 @@
                             <button type="button" class="faq-expand-btn" data-bs-toggle="collapse" data-bs-target="#collapse-faq-1" aria-expanded="false" aria-controls="collapse-faq-1">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="#fff" class="bi bi-plus" viewBox="0 0 16 16">
                                 <path d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4z"></path>
-                        </svg>
+                                </svg>
                             </button>
                         </div>
                         <br>
