updated team assets

--- a/resources/templates/pages/team.html
+++ b/resources/templates/pages/team.html
@@ -29,9 +29,9 @@
                             <span style="font-size: 16px;">{{ profile.profile_position|safe }}</span>
                             <br>
                             <span style="font-size: 14px;">Connect through</span>
-                            <img src="/storage/static/images/Linkedin.png" width="20px" height="20px" class="" usemap="#linkedin_map">
-                            <map name="linkedin_map">
-                                <area shape="circle" coords="12,12,12" alt="Linkedin" target="_blank" href="{{ profile.linkedin_url }}">
+                            <img src="/storage/static/images/Linkedin.png" width="20px" height="20px" usemap="#linkedin_map-{{ profile.profile_name }}">
+                            <map name="linkedin_map-{{ profile.profile_name }}">
+                                <area shape="circle" coords="10,10,10" alt="Linkedin" target="_blank" class="team-img-area" href="{{ profile.linkedin_url }}">
                             </map>
                             <hr class="profile-hr">
                         </p>
@@ -51,9 +51,9 @@
                             <span style="font-size: 16px;">{{ profile.profile_position|safe }}</span>
                             <br>
                             <span style="font-size: 14px;">Connect through</span>
-                            <img src="/storage/static/images/Linkedin.png" width="20px" height="20px" class="" usemap="#linkedin_map">
-                            <map name="linkedin_map">
-                                <area shape="circle" coords="12,12,12" alt="Linkedin" target="_blank" href="{{ profile.linkedin_url }}">
+                            <img src="/storage/static/images/Linkedin.png" width="20px" height="20px" usemap="#linkedin_map-{{ profile.profile_name }}">
+                            <map name="linkedin_map-{{ profile.profile_name }}">
+                                <area shape="circle" coords="10,10,10" alt="Linkedin" target="_blank" class="team-img-area" href="{{ profile.linkedin_url }}">
                             </map>
                             <hr class="profile-hr">
                         </p>
@@ -73,9 +73,9 @@
                             <span style="font-size: 16px;">{{ profile.profile_position|safe }}</span>
                             <br>
                             <span style="font-size: 14px;">Connect through</span>
-                            <img src="/storage/static/images/Linkedin.png" width="20px" height="20px" class="" usemap="#linkedin_map">
-                            <map name="linkedin_map">
-                                <area shape="circle" coords="12,12,12" alt="Linkedin" target="_blank" href="{{ profile.linkedin_url }}">
+                            <img src="/storage/static/images/Linkedin.png" width="20px" height="20px" usemap="#linkedin_map-{{ profile.profile_name }}">
+                            <map name="linkedin_map-{{ profile.profile_name }}">
+                                <area shape="circle" coords="10,10,10" alt="Linkedin" target="_blank" class="team-img-area" href="{{ profile.linkedin_url }}">
                             </map>
                             <hr class="profile-hr">
                         </p>
