--- a/resources/templates/pages/team.html
+++ b/resources/templates/pages/team.html
@@ -19,7 +19,7 @@
             <br>
             <br>
             <br>
-            <div class="row">
+            <div class="row team-gutter-x">
                 {% for profile in top_profiles_data %}
                 <div class="col-lg-{{ (12 / top_profiles_data|length)|int }}">
                     <div class="profile-img" style="--url: url('{{ profile.img_url }}')">
@@ -41,7 +41,7 @@
             </div>
         </div>
         <div class="content container-sm">
-            <div class="row">
+            <div class="row team-gutter-x">
                 {% for profile in center_profiles_data %}
                 <div class="col-lg-{{ (12 / center_profiles_data|length)|int }}">
                     <div class="profile-img" style="--url: url('{{ profile.img_url }}')">
@@ -63,7 +63,7 @@
             </div>
         </div>
         <div class="content container-sm">
-            <div class="row">
+            <div class="row team-gutter-x">
                 {% for profile in bottom_profiles_data %}
                 <div class="col-lg-{{ (12 / bottom_profiles_data|length)|int }}">
                     <div class="profile-img" style="--url: url('{{ profile.img_url }}')">
