--- a/resources/templates/pages/whitepaper.html
+++ b/resources/templates/pages/whitepaper.html
@@ -5,15 +5,51 @@
 {% block content %}
 
 
-    <div class="position-ref  top-background" style="height: 100vh;">
+<div class="position-ref  background-sub-pages">
         {% include "/components/navbar.html" %}
-        <br>
-        <br>
-        <br>
-        <br>
-        <div class="row" style="font-weight: 800; color: #fff; text-align: center; display: block; margin-left: auto; margin-right: auto;">
-            <h1>COMING SOON!</h1>
+        <div class="content container-sm">
+            <div class="col-lg">
+                <div class="row padding-top-70">
+                    <div class="col-sm-12">
+                        <h1 class="font-text-bold header-main" style="font-size: 54px;">Whitepaper</h1>
+                    </div>
+                </div>
+            </div>
+            <br>
+            <br>
+            <br>
+            <br>
+            <div class="row">
+            </div>
         </div>
+        <div class="content container-sm">
+            <div class="row">
+            </div>
+        </div>
+<!--         <div class="content container-sm">
+            <div class="row">
+                {% for profile in bottom_profiles_data %}
+                <div class="col-lg-{{ (12 / bottom_profiles_data|length)|int }}">
+                    <div class="profile-img" style="--url: url('{{ profile.img_url }}')">
+                        <p class="profile-text">
+                            <span style="font-weight: 800; font-family: 'Mosk Bold';">{{ profile.profile_name }}</span>
+                            <br>
+                            <span style="font-size: 16px;">{{ profile.profile_position|safe }}</span>
+                            <br>
+                            <span style="font-size: 14px;">Connect through</span>
+                            <img src="/storage/static/images/Linkedin.png" width="20px" height="20px" usemap="#linkedin_map-{{ profile.profile_name }}">
+                            <map name="linkedin_map-{{ profile.profile_name }}">
+                                <area shape="circle" coords="10,10,10" alt="Linkedin" target="_blank" class="team-img-area" href="{{ profile.linkedin_url }}">
+                            </map>
+                            <hr class="profile-hr">
+                        </p>
+                    </div>
+                </div>
+                {% endfor %}
+            </div>
+        </div> -->
+
+        <!-- <div class="bottom-gradient-main"></div> -->
     </div>
     {% include "/components/footer.html" %}
 {% endblock %}
