changes for whitepaper

--- a/resources/templates/pages/whitepaper.html
+++ b/resources/templates/pages/whitepaper.html
@@ -11,21 +11,26 @@
             <div class="col-lg">
                 <div class="row padding-top-70">
                     <div class="col-sm-12">
-                        <h1 class="font-text-bold header-main" style="font-size: 54px;">Whitepaper</h1>
+                        <h1 class="font-text-bold header-main" style="font-size: 54px;">COMING SOON</h1>
                     </div>
                 </div>
             </div>
-            <br>
-            <br>
-            <br>
-            <br>
-            <div class="row">
-            </div>
         </div>
-        <div class="content container-sm">
+        <br>
+        <br>
+<!--         <div class="content container-sm">
             <div class="row">
+                    <div class="col-sm-4">
+                        <h2 style="text-align: center;">Overview</h2>
+                    </div>
+                    <div class="col-sm-5">
+                        <p style="text-align: left;">
+                            SAFEGALAXY is a frictionless yield & liquidity generation smart contract protocol that works by applying 10% fee for each transaction and instantly splitting that fee by rewarding holders with 5% and auto locking 5% in Pancake LP. Holders don't need to do anything than just hold SAFEGALAXY tokens in their wallet to earn rewards. Contract allows to exclude certain addresses like PancakeSwap contract address from receiving rewards, as well allow to include certain address to receive reward if required.
+                        </p>
+                    </div>
+                    <div class="col-sm-3"></div>>
             </div>
-        </div>
+        </div> -->
 <!--         <div class="content container-sm">
             <div class="row">
                 {% for profile in bottom_profiles_data %}
