--- a/storage/static/sass/style.scss
+++ b/storage/static/sass/style.scss
@@ -34,6 +34,14 @@ a:focus {
     outline: none !important;
 }
 
+.align-left {
+    text-align: left;
+}
+
+.align-right {
+    text-align: right;
+}
+
 .font-text {
     font-family: 'Mosk';
     font-weight: 700;
@@ -420,6 +428,29 @@ a:focus {
     -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 
+/* Whitepaper page */
+
+.whitepaper-header {
+    font-family: "Mosk Bold";
+    font-weight: 800;
+    color: #fff;
+}
+
+.whitepaper-text {
+    font-family: "Mosk";
+    font-weight: 500;
+    color: #fff;
+
+}
+
+.whitepaper-overview {
+    font-size: 18px;
+}
+
+.whitepaper-tokenomics {
+    font-size: 24px;
+}
+
 @media (min-width: 1200px) {
 
     .team-gutter-x {
@@ -435,6 +466,16 @@ a:focus {
 
     .header-main {
         font-size: 60px;
+    }
+
+    .whitepaper-overview {
+        margin: 20px;
+    }
+
+
+    .whitepaper-tokenomics {
+        font-size: 16px;
+        padding-right: 20px;
     }
 
     .header-main-sm {
